修复不限定角度计算的bug； 修复Block类Equals时properties可能为null时的错误； 添加“不使用防刷怪方块”选项； 修复取消选择保存文件时读取到空路径的bug； 规范代码。

--- a/Ice_Highway_Helper.csproj
+++ b/Ice_Highway_Helper.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="SharpNBT\SharpNBT.csproj" />
+    <PackageReference Include="SharpNBT" Version="1.2.0" />
   </ItemGroup>
 
 </Project>
